--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,8 +19,8 @@ material = { group = "com.google.android.material", name = "material", version.r
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
-glide = { group = "com.github.bumptech.glide", name = "glide", version = "5.0.0-rc01" }
-compiler = { group = "com.github.bumptech.glide", name = "compiler", version = "5.0.0-rc01" }
+glide = { group = "com.github.bumptech.glide", name = "glide", version = "4.12.0" }
+compiler = { group = "com.github.bumptech.glide", name = "compiler", version = "4.12.0" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
